# GameOfLife

./: play.py  universe.py
cpp/: CMakeLists.txt  main.cpp
cpp/include/: universe.hh
cpp/src/: universe.cc
cuda/: gol.cu  plot.py
initials/: 42.txt  disturbed.txt  gliders.txt  gliders_interference.txt  rPentomino.txt  random.txt  single_glider.txt  static.txt
